--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,8 @@ Game CSS
 
 /* General stuff
 --------------------------------------------------------------------------------- */
-html, body {
+html,
+body {
     width: 100%;
     height: 100%;
     margin: 0;
@@ -58,6 +59,13 @@ body {
 --------------------------------------------------------------------------------- */
 #loader {
     position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #040e12;
+}
+
+#loader-content {
+    position: absolute;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
@@ -65,41 +73,36 @@ body {
     transform: translate(-50%, -50%);
 }
 
-.text {
-    font-family: "neuropol_xregular", Arial, sans-serif;
-    font-size: 32px;
-    color: #fff;
-}
-
-.ball-outer, .ball-inner {
+.ball-outer,
+.ball-inner {
     opacity: .9;
     margin: 0 auto;
-    background-color: #000;
-    border: 5px solid rgba(2, 204, 209, 0.9);
-    border-top: 5px solid rgba(0, 0, 0, 0);
-    border-left: 5px solid rgba(0, 0, 0, 0);
+    border-top: 3px solid rgba(0, 0, 0, 0);
+    border-left: 3px solid rgba(0, 0, 0, 0);
     border-radius: 50px;
 }
 
 .ball-outer {
     opacity: .9;
-    box-shadow: 0 0 35px #009498;
     width: 50px;
     height: 50px;
-    -moz-animation: spin .5s infinite linear;
-    -webkit-animation: spin .5s infinite linear;
-    animation: spin .5s infinite linear;
+    border-right: 3px solid rgba(2, 204, 209, 0.9);
+    border-bottom: 3px solid rgba(2, 204, 209, 0.9);
+    -moz-animation: spin 1.2s infinite linear;
+    -webkit-animation: spin 1.2s infinite linear;
+    animation: spin 1.2s infinite linear;
 }
 
 .ball-inner {
-    box-shadow: 0 0 15px #009498;
     width: 30px;
     height: 30px;
     position: relative;
-    top: -50px;
-    -moz-animation: spinoff .5s infinite linear;
-    -webkit-animation: spinoff .5s infinite linear;
-    animation: spinoff .5s infinite linear;
+    top: -47px;
+    border-right: 3px solid rgba(255, 255, 255, 0.9);
+    border-bottom: 3px solid rgba(255, 255, 255, 0.9);
+    -moz-animation: spinoff .7s infinite linear;
+    -webkit-animation: spinoff .7s infinite linear;
+    animation: spinoff .7s infinite linear;
 }
 
 @-moz-keyframes spin {
